2007-08-26  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/gui/button.cpp: Fixed incorrect button dimensions, as they mess
	OpenGL display with rectangle textures.
	* src/graphics.cpp, src/openglgraphics.h, src/graphics.h,
	src/openglgraphics.cpp: Fixed fonts not being recolored by adding an
	explicit parameter to require it.

2007-08-25  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* configure.ac: Removed dependency on Guichan's OpenGL library.
	* src/Makefile.am, src/resources/sdlimageloader.cpp,
	src/resources/sdlimageloader.h, src/resources/openglsdlimageloader.h,
	src/resources/openglsdlimageloader.cpp, src/resources/imageloader.cpp,
	src/resources/imageloader.h, src/gui/gui.cpp, src/gui/gui.h: Replaced
	Guichan's image loaders with our owns, so that we have control over all
	the images used as textures.
	* src/resources/image.cpp, src/openglgraphics.h, src/resources/image.h,
	src/openglgraphics.cpp, src/graphics.cpp, src/graphics.h: Added support
	for rectangle OpenGL textures when available, in order to reduce video
	memory usage.

2007-08-19  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/CMakeLists.txt: Updated CMake file.
	* data/equipment.xml: Fixed typo in female light plate mail.

2007-08-19  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/localplayer.h: Fixed typo.

2007-08-18  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/localplayer.cpp, src/gui/status.cpp, src/net/protocol.h,
	src/net/playerhandler.cpp, src/localplayer.h: Adapted to new server
	handling of character attributes.

2007-08-14  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/net/messagein.h, src/net/messagein.cpp: Fixed error-prone
	interface.
	* src/net/inventoryhandler.cpp: Handled money as an inventory part.
	* src/gui/sell.cpp, src/gui/buy.cpp, src/net/gameserver/player.h,
	src/net/gameserver/player.cpp: Enabled buying and selling from NPCs.
	* src/gui/trade.cpp, src/gui/trade.h, src/net/tradehandler.cpp,